# Modern-Cout

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ch.md  print.hpp
.cache/clangd/index/: CATCH.cpp.1ECAC1AC8F65FC9E.idx
.github/workflows/: cmake-multi-platform.yml  test.yml
include/: cout.hpp
src/: cout.hpp
test/: CMakeLists.txt  main.cpp
test/.cache/clangd/index/: catch.hpp.FB12A7FEDB6E69C6.idx  main.cpp.3A0661510E294F6E.idx
test/catch/: CMakeLists.txt  main.cpp
test/print/: CMakeLists.txt  main.cpp
